--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/react.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.1/JSXTransformer.js"></script>
     <script src="http://code.jquery.com/jquery.js"></script>
-    <!-- <script src="js/bundle.js"></script> -->
-    <script type="text/jsx" src="js/components/product.js"></script>
-    <script type="text/jsx" src="js/components/priceChooser.js"></script>
-    <script type="text/jsx" src="js/components/moneySpender.js"></script>
+    <script src="js/bundle.js"></script>
+    
 </body>
 </html>
